--- a/templates/admin/emprunt/show.html.twig
+++ b/templates/admin/emprunt/show.html.twig
@@ -12,24 +12,23 @@
                 <td>{{ emprunt.id }}</td>
             </tr>
             <tr>
+                <th>Nom</th>
+                <td>{{ emprunt.emprunteur.nom }}</td>
+            </tr>            <tr>
+                <th>Prénom</th>
+                <td>{{ emprunt.emprunteur.prenom }}</td>
+            </tr>
+            <tr>
+                <th>Titre</th>
+                <td>{{ emprunt.livre.titre }}</td>
+            </tr>
+            <tr>
                 <th>DateEmprunt</th>
                 <td>{{ emprunt.dateEmprunt ? emprunt.dateEmprunt|date('Y-m-d H:i:s') : '' }}</td>
             </tr>
             <tr>
                 <th>DateRetour</th>
                 <td>{{ emprunt.dateRetour ? emprunt.dateRetour|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-            <tr>
-                <th>CreatedAt</th>
-                <td>{{ emprunt.createdAt ? emprunt.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-            <tr>
-                <th>UpdatedAt</th>
-                <td>{{ emprunt.updatedAt ? emprunt.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-            <tr>
-                <th>DeletedAt</th>
-                <td>{{ emprunt.deletedAt ? emprunt.deletedAt|date('Y-m-d H:i:s') : '' }}</td>
             </tr>
         </tbody>
     </table>
