--- a/templates/admin/emprunt/index.html.twig
+++ b/templates/admin/emprunt/index.html.twig
@@ -5,15 +5,15 @@
 {% block body %}
     <h1>Liste des emprunts</h1>
 
+    <a href="{{ path('app_admin_emprunt_new') }}">Create new</a>
     <table class="table">
         <thead>
             <tr>
                 <th>Id</th>
+                <th>Nom</th>
+                <th>Prénom</th>
                 <th>DateEmprunt</th>
                 <th>DateRetour</th>
-                <th>CreatedAt</th>
-                <th>UpdatedAt</th>
-                <th>DeletedAt</th>
                 <th>actions</th>
             </tr>
         </thead>
@@ -21,11 +21,10 @@
         {% for emprunt in emprunts %}
             <tr>
                 <td>{{ emprunt.id }}</td>
+                <td>{{ emprunt.emprunteur.nom }}</td>
+                <td>{{ emprunt.emprunteur.prenom }}</td>               
                 <td>{{ emprunt.dateEmprunt ? emprunt.dateEmprunt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>{{ emprunt.dateRetour ? emprunt.dateRetour|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ emprunt.createdAt ? emprunt.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ emprunt.updatedAt ? emprunt.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ emprunt.deletedAt ? emprunt.deletedAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>
                     <a href="{{ path('app_admin_emprunt_show', {'id': emprunt.id}) }}">show</a>
                     <a href="{{ path('app_admin_emprunt_edit', {'id': emprunt.id}) }}">edit</a>
@@ -39,5 +38,4 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_admin_emprunt_new') }}">Create new</a>
 {% endblock %}
