Part 3 Mise à jour

--- a/templates/admin/emprunt/show.html.twig
+++ b/templates/admin/emprunt/show.html.twig
@@ -19,7 +19,7 @@
                 <td>{{ emprunt.emprunteur.prenom }}</td>
             </tr>
             <tr>
-                <th>Titre</th>
+                <th>Livre</th>
                 <td>{{ emprunt.livre.titre }}</td>
             </tr>
             <tr>
